Works with lists of patterns